--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@
 
     -->
     <script  src="js/index.js"></script>
+
+
+    <h1 id="title">Contact Form</h1>
+    <p id="description">This is our contact form, we'll be on touch!</p>
+    <form id="survey-form"></form>
   </body>
 </html>
