--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 
     <h1 id="title">Contact Form</h1>
     <p id="description">This is our contact form, we'll be on touch!</p>
-    <form id="survey-form"></form>
+    <form id="survey-form">
+
+
+      <label id="number" for="number">Phone Number</label><br>
+      <input type="number" id="number" name="number" value="0" min="1" max="10"><br>
+
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
