--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
       <label id="number" for="number">Phone Number</label><br>
-      <input type="number" id="number" name="number" value="0" min="1" max="10"><br>
+      <input type="number" id="number" name="number" value="0" min="1" max="10" onsubmit="return validateForm()"><br>
 
       <input type="submit" value="Submit">
     </form>
