--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <ul class="errorMessages"></ul>
       
       <label id="name-label">Name</label>
-      <input id="name" type="text" aria-require="true" placeholder="FULL Name"><br>
+      <input id="name" type="text" required="true" placeholder="FULL Name"><br>
       <label id="email-label">Email</label>
-      <input id="email" type="email" require="true" placeholder="example@gmail.com"><br>
+      <input id="email" type="email" required="true" placeholder="example@gmail.com"><br>
       <label id="number-label" for="number">Number</label><br>
       <input type="number" id="number" name="number" value="0" min="1" max="10" require="true" placeholder="0"><br>
       <label for="cars">Choose a car:</label>
